# SecureAssentGuard

./: CMakeLists.txt  main.cpp
src/core/: C_SecureAsset.cpp  C_SecureAsset.h  SharedTypes.h  main.cpp  maincore.cpp
src/core/devices/: C_Actuator.h  C_Fan.cpp  C_Fan.h  C_Fingerprint.cpp  C_Fingerprint.h  C_RDM6300.cpp  C_RDM6300.h  C_Sensor.h  C_ServoMG996R.cpp  C_ServoMG996R.h  C_TH_KS0348.h  C_TH_SHT30.cpp  C_TH_SHT30.h  C_YRM1001.cpp  C_YRM1001.h  C_alarmActuator.cpp  C_alarmActuator.h
src/core/hal/: C_GPIO.cpp  C_GPIO.h  C_I2C.cpp  C_I2C.h  C_PWM.cpp  C_PWM.h  C_UART.cpp  C_UART.h
src/core/ipc/: C_Monitor.cpp  C_Monitor.h  C_Mqueue.cpp  C_Mqueue.h
src/core/threads/: C_Thread.cpp  C_Thread.h  C_tAct.cpp  C_tAct.h  C_tAlarmTimer.cpp  C_tAlarmTimer.h  C_tCheckMovement.cpp  C_tCheckMovement.h  C_tInventoryScan.cpp  C_tInventoryScan.h  C_tLeaveRoomAccess.cpp  C_tLeaveRoomAccess.h  C_tReadEnvSensor.cpp  C_tReadEnvSensor.h  C_tSighandler.cpp  C_tSighandler.h  C_tTestWorker.h  C_tVerifyRoomAccess.cpp  C_tVerifyRoomAccess.h  C_tVerifyVaultAccess.cpp  C_tVerifyVaultAccess.h
src/daemons/database/: dDatabase.cpp  dDatabase.h  main_db.cpp
src/daemons/web/: dWebServer.cpp  dWebServer.h  main_web.cpp
web/: actuators.html  assets.html  dashboard.html  login.html  logs.html  sensors.html  settings.html  users.html
